fix left wealth text font/spacing

--- a/app/assets/stylesheets/sign-up.scss
+++ b/app/assets/stylesheets/sign-up.scss
@@ -10,8 +10,8 @@
 
       .top-quote {
         text-transform: uppercase;
-        font-size: 30pt;
-        line-height: 30pt;
+        font-size: 52px;
+        line-height: 48px;
         font-weight: bold;
       }
 
@@ -37,8 +37,8 @@
     // Fixed Section with wealth quote/paragraph
     .fixed-section {
       position: fixed;
-      width: 40%;
-      left: 5%;
+      width: 460px;
+      right: 55%;
       top: 10%;
       overflow: hidden;
       color: #fff;
